drf register wip

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=vscode,python,django
 my_settings
 regex
+secrets.json
 
 ### Django ###
 *.log
